# cnn-cpp-slint

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: build.sh  clean.sh  run.sh
src/: app.cpp  app.hpp  mainWindow.cpp  mainWindow.hpp
ui/: main_window.slint
wxWidgets/lib/: libwx_baseu-3.2.so.0  libwx_baseu_xml-3.2.so.0  libwx_gtk3u_aui-3.2.so.0  libwx_gtk3u_propgrid-3.2.so.0
wxWidgets/lib/wx/config/: inplace-gtk3-unicode-3.2
wxWidgets/lib/wx/include/gtk3-unicode-3.2/wx/: setup.h
